<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/fm_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_nav"/>

    <com.codedix.distantiaui.views.BottomNav
        android:id="@+id/ll_nav"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="3"
        android:paddingBottom="13dp">

        <RelativeLayout
            android:id="@+id/rl_nav_profile"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_profile"
                android:tint="#fff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img1"
                android:layout_centerHorizontal="true"
                android:textColor="#fff"
                android:text="@string/profile"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_nav_scan"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerInParent="true"
                android:tint="#fff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img2"
                android:layout_centerHorizontal="true"
                android:textColor="#fff"
                android:text="@string/service"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_nav_info"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img3"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_info"
                android:tint="#fff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img3"
                android:layout_centerHorizontal="true"
                android:textColor="#fff"
                android:text="@string/info"/>

        </RelativeLayout>

    </com.codedix.distantiaui.views.BottomNav>

</RelativeLayout>